# Junction-2025

./: .dockerignore  .env.bak  .env.example  .gitignore  DEPLOYMENT.md  DIGITAL_TWIN_CONFIG.md  DOCKER.md  README.md  WEBSOCKET_INTEGRATION.md  WEBSOCKET_SETUP.md  check_llm_env.py  docker-compose.full.yml  docker-compose.yml  package-lock.json  results.json  run_backend.py  run_backend.sh  set_llm_credentials.sh  set_llm_env.py  test_digital_twin.py  test_llm_connection.py  test_websocket.py  test_websocket.sh  test_websocket_json.py  test_websocket_simple.py
agents/: Dockerfile  __init__.py  pyproject.toml  requirements.txt
agents/common/: __init__.py  base.py
agents/inflow_agent/: main.py
agents/optimizer_agent/: ALL_CONSTRAINTS.md  ARCHITECTURE.md  ARCHITECTURE_TREE.txt  CONSTRAINTS_INVENTORY.md  FEATURES.md  FLUSH_PLAN.md  Hackathon_HSY_data.numbers  Hackathon_HSY_data.xlsx  PLAN.md  PUMP_SPECS.md  README_DEMO.md  demo_simulator.py  explainability.py  main.py  optimizer.py  server.py  test_data_loader.py  test_demo_websocket.py  test_metrics.py  test_optimizer_with_data.py  test_rotation_quick.py  test_simulator.py
agents/price_agent/: main.py  price_data.json  server.py
agents/status_agent/: main.py
agents/weather_agent/: .env.template  main.py  mcp_server.py  server.py  weather_data.json
backend/: .dockerignore  .zshrc  DEBUGGING.md  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py  models.py
backend/app/api/routes/: demo.py  (+2 more)
backend/tests/: conftest.py  test_api_routes.py  test_health.py
(+103 files in other folders)
