[project]
name = "hsy-mcp-agents"
version = "0.1.0"
description = "Collection of MCP micro-agents for the HSY optimizer"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "aiofiles>=24.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
