[project]
name = "hsy-optimizer-backend"
version = "0.1.0"
description = "FastAPI backend for the HSY Blominmäki AI agent pumping optimization system"
readme = "../README.md"
authors = [
  { name = "HSY Junction Team" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.1.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "redis>=5.0.4",
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.0",
  "requests>=2.32.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.6",
  "ruff>=0.6.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["app"]
